v1.1.0/modules/schema/pages/class/EquipmentFault.adoc
= `EquipmentFault`
:toclevels: 4


+++A fault applied at the terminal, external to the equipment. This class is not used to specify faults internal to the equipment.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EquipmentFault`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Fault.adoc[`Fault`]
*** *`EquipmentFault`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 0..1 +
xref::class/Terminal.adoc[`Terminal`]
| +++The terminal connecting to the bus to which the fault is applied.+++
| _n/a_

| <<FaultCauseTypes,`FaultCauseTypes`>>
//| [[slots_table.FaultCauseTypes]]<<FaultCauseTypes,`FaultCauseTypes`>>
| 0..* +
xref::class/FaultCauseType.adoc[`FaultCauseType`]
| +++All types of fault cause.+++
| xref::class/Fault.adoc[`Fault`]

| <<FaultyEquipment,`FaultyEquipment`>>
//| [[slots_table.FaultyEquipment]]<<FaultyEquipment,`FaultyEquipment`>>
| 0..1 +
xref::class/Equipment.adoc[`Equipment`]
| +++Equipment carrying this fault.+++
| xref::class/Fault.adoc[`Fault`]

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this fault.+++
| xref::class/Fault.adoc[`Fault`]

| <<Outage,`Outage`>>
//| [[slots_table.Outage]]<<Outage,`Outage`>>
| 0..1 +
xref::class/Outage.adoc[`Outage`]
| +++Outage associated with this fault.+++
| xref::class/Fault.adoc[`Fault`]

| <<impedance,`impedance`>>
//| [[slots_table.impedance]]<<impedance,`impedance`>>
| 0..1 +
xref::class/FaultImpedance.adoc[`FaultImpedance`]
| +++Fault impedance. Its usage is described by 'kind'.+++
| xref::class/Fault.adoc[`Fault`]

| <<kind,`kind`>>
//| [[slots_table.kind]]<<kind,`kind`>>
| 0..1 +
xref::enumeration/PhaseConnectedFaultKind.adoc[`PhaseConnectedFaultKind`]
| +++The kind of phase fault.+++
| xref::class/Fault.adoc[`Fault`]

| <<occurredDateTime,`occurredDateTime`>>
//| [[slots_table.occurredDateTime]]<<occurredDateTime,`occurredDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The date and time at which the fault occurred.+++
| xref::class/Fault.adoc[`Fault`]

| <<phases,`phases`>>
//| [[slots_table.phases]]<<phases,`phases`>>
| 0..1 +
xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++The phases participating in the fault. The fault connections into these phases are further specified by the type of fault.+++
| xref::class/Fault.adoc[`Fault`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#FaultCauseTypes]
=== `FaultCauseTypes`
+++All types of fault cause.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.FaultCauseTypes`
| Cardinality
| 0..*
| Type
| xref::class/FaultCauseType.adoc[`FaultCauseType`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.FaultCauseTypes,&#10548;>>
--
////


//[discrete]
[#FaultyEquipment]
=== `FaultyEquipment`
+++Equipment carrying this fault.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.FaultyEquipment`
| Cardinality
| 0..1
| Type
| xref::class/Equipment.adoc[`Equipment`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.FaultyEquipment,&#10548;>>
--
////


//[discrete]
[#impedance]
=== `impedance`
+++Fault impedance. Its usage is described by 'kind'.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.impedance`
| Cardinality
| 0..1
| Type
| xref::class/FaultImpedance.adoc[`FaultImpedance`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.impedance,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kind]
=== `kind`
+++The kind of phase fault.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.kind`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseConnectedFaultKind.adoc[`PhaseConnectedFaultKind`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.kind,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this fault.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#occurredDateTime]
=== `occurredDateTime`
+++The date and time at which the fault occurred.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.occurredDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.occurredDateTime,&#10548;>>
--
////


//[discrete]
[#Outage]
=== `Outage`
+++Outage associated with this fault.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.Outage`
| Cardinality
| 0..1
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.Outage,&#10548;>>
--
////


//[discrete]
[#phases]
=== `phases`
+++The phases participating in the fault. The fault connections into these phases are further specified by the type of fault.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Fault.phases`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]

| Inherited from
| xref::class/Fault.adoc[`Fault`]


|===

////
[.text-left]
--
<<slots_table.phases,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++The terminal connecting to the bus to which the fault is applied.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EquipmentFault.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Terminal.adoc[`Terminal`] | xref::class/Terminal.adoc#EquipmentFaults[`EquipmentFaults`]


|===

